--- a/css/student_portfolio.css
+++ b/css/student_portfolio.css
@@ -59,7 +59,7 @@ q {
 }
 
 img {
-    filter: blur(2px); 
+    filter:sepia(50%); 
     border-radius: 50%; 
     max-width: 100%; 
     height: 340px; 
@@ -130,8 +130,8 @@ footer {
 
 .Navbar a:hover {
     background-color:crimson; 
-    color: burlywood; 
-    font-weight: bold; 
+    color: whitesmoke; 
+    font-weight: lighter; 
 }
 
 .Navbar a.active { 
