--- a/css/student_portfolio.css
+++ b/css/student_portfolio.css
@@ -243,7 +243,7 @@ footer {
   .form-container {
     max-width: 49vw;
     padding: 9px;
-    background-color: burlywood;
+    background-color: mediumslateblue;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
   
